[package]
name = "backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = {version = "0.4.5", features = ["tokio", "gzip"]}
async-tar = "0.4.2"
flate2 = "1.0.28"
futures = "0.3.29"
opendal = "0.43.0"
rayon = "1.8.0"
reqwest = "0.11.22"
tar = "0.4.40"
tokio = { version = "1.35.0", features = ["full"] }
tokio-tar = "0.3.1"
